leader home + event done